--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: #333333;
+  color: #ffffff;
 }
